多线程优化

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:onClick="clickSwitch"
-        android:text="start"
+        android:text="start vpn"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.157"
@@ -39,7 +39,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:onClick="clickHttp"
-        android:text="http"
+        android:text="http test"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.752"
@@ -53,7 +53,7 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:onClick="clickDns"
-        android:text="dns"
+        android:text="dns test"
         android:textSize="18sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintHorizontal_bias="0.157"
